--- a/app/src/main/res/layout/activity_easy_paisa_rest_apis.xml
+++ b/app/src/main/res/layout/activity_easy_paisa_rest_apis.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".EasyPaisaRestAPIs">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20sp"
+        >
+
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/webview"
+            />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
